fix(nav): removed app-name from tool-bar, when on small screen

--- a/src/app/main/nav/nav.component.scss
+++ b/src/app/main/nav/nav.component.scss
@@ -34,3 +34,9 @@
 :host ::ng-deep .mat-chip.mat-standard-chip:hover{
   background: none !important;
 }
+
+@media only screen and (max-width: 600px){
+  .app-name{
+    display: none;
+  }
+}
